variables for possible light and dark mode in the future, but now we focus on functionality

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
 
 :root {
   --green: #819a91;
+  --dark-bg-1: #222831;
+  --dark-bg-2: #393e46;
   --green-light: #a7c1a8;
   --beige: #d1d8be;
   --beige-light: #eeefe0;
