final button styling, maybe?

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ p {
 .incr-btn:hover,
 .decr-btn:hover {
   background-color: var(--light-orange);
+  border: 1px solid var(--light-orange);
   color: white;
 }
 
