added more hymns and not displying chorus when chorus string is empty

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   --bg-color: #faf6e9;
 }
 body {
-  font-family: "Georgia", serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #f7f1e3;
 }
 
@@ -103,6 +103,10 @@ body {
   background-color: var(--light-orange);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Soft shadow */
   font-weight: bold;
+}
+
+.chorus.not-exist {
+  display: none;
 }
 
 .right-panel {
